fixing wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a{
 }
 
 .container{
-    width: 1000px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -63,14 +63,15 @@ header img{
     width: 8%;
 }
 header #menu{
-    width: 18%;
     padding-left: 6rem;
+    flex-wrap: nowrap;
 }
 
 #categorie{
     padding-top: .2rem ;
     font-weight: 700;
     font-size: .7rem;
+    flex-wrap: nowrap;
 }
 
 #categorie li{
@@ -83,7 +84,7 @@ main{
 }
 
 article{
-    width: calc((100% - 40px)/ 3);
+    width: calc((1000px / 3) - 20px );
 } 
 
 .card .img{
